protocols/tests/adders/adder_d1/fork_before_step_error.out
error: Thread 0 (transaction 'add_fork_before_step') called `fork()` without previously calling `step()` first
   ┌─ adders/adder_d1/fork_before_step_error.prot:11:3
   │
11 │   fork();
   │   ^^^^^^^ Thread 0 (transaction 'add_fork_before_step') called `fork()` without previously calling `step()` first

