protocols/tests/adders/adder_d1/fork_before_step_error.prot
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

// This should fail since it calls `fork()` before calling `step`
prot add_fork_before_step<DUT: Adder>(in a: u32, in b: u32, out s: u32) {
  DUT.a := a;
  DUT.b := b;
  fork();
  step();
  DUT.a := X;
  DUT.b := X;
  assert_eq(s, DUT.s);
  step();
}

